# graphs-tui

./: .gitignore  Cargo.toml  README.md  web.mmd
.github/workflows/: ci.yml  release.yml
src/: d2_parser.rs  error.rs  grid.rs  layout.rs  lib.rs  parser.rs  pathfinding.rs  pie_parser.rs  renderer.rs  seq_parser.rs  state_parser.rs  text.rs  types.rs
src/renderer/: backend.rs  charset.rs  edges.rs  mod.rs  shapes.rs  subgraph.rs
tests/: integration_tests.rs  issue_tests.rs
tests/snapshots/: integration_tests__ascii_mode.snap  integration_tests__bt_direction.snap  integration_tests__chained_edges.snap  integration_tests__comments_ignored.snap  integration_tests__d2_auto.snap  integration_tests__d2_backward_arrow.snap  integration_tests__d2_cloud_shape.snap  integration_tests__d2_containers.snap  integration_tests__d2_document_shape.snap  integration_tests__d2_edge_labels.snap  integration_tests__d2_labels.snap  integration_tests__d2_line.snap  integration_tests__d2_person_shape.snap  integration_tests__d2_shapes.snap  integration_tests__d2_sql_table_shape.snap  integration_tests__d2_web_architecture.snap  integration_tests__dotted_arrow.snap  integration_tests__edge_labels.snap  integration_tests__graph_td_supported.snap  integration_tests__hexagon_shape.snap  integration_tests__labels_correctly.snap  integration_tests__labels_with_spaces_and_special_chars.snap  integration_tests__max_width_constraint.snap  integration_tests__mermaid_auto.snap  integration_tests__multiline_label.snap  integration_tests__node_label_update.snap  integration_tests__node_shapes.snap  (+45 more)
